--- a/index.html
+++ b/index.html
@@ -1,279 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>Pratim & Debjani's Wedding Menu</title>
-<style>
-* { box-sizing: border-box; margin: 0; padding: 0; }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wedding Menu</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Georgia', serif;
+      background-color: #fffaf0;
+      color: #333;
+      text-align: center;
+      overflow: hidden;
+    }
 
-body {
-  font-family: 'Georgia', serif;
-  background: linear-gradient(to bottom, #002366, #ffffff);
-  color: #333;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  overflow-x: hidden;
-  overflow-y: auto;
-}
+    .fireworks {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 9999;
+      pointer-events: none;
+    }
 
-canvas { 
-  position: fixed; 
-  top: 0; 
-  left: 0; 
-  width: 100%; 
-  height: 100%; 
-  pointer-events: none; 
-  z-index: 9999;
-}
+    h1 {
+      font-size: 2.5em;
+      color: #d6336c;
+      margin-top: 30px;
+      text-shadow: 1px 1px #ffd6d6;
+    }
 
-header {
-  background-color: #002366;
-  color: #fff;
-  width: 100%;
-  text-align: center;
-  padding: 2rem 1rem;
-  position: relative;
-  z-index: 2;
-}
+    p {
+      font-size: 1.1em;
+      margin: 10px 20px;
+    }
 
-header h1 {
-  font-size: 2.2rem;
-  margin: 0;
-  position: relative;
-  display: inline-block;
-}
+    .menu {
+      margin: 30px auto;
+      background: #fff;
+      width: 90%;
+      max-width: 600px;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+      padding: 20px;
+      position: relative;
+      z-index: 10;
+    }
 
-header p { font-size: 1.1rem; margin-top: 0.5rem; }
-.info { margin-top: 1rem; font-size: 0.85rem; color: #eee; line-height: 1.4; }
+    .section-title {
+      font-size: 1.6em;
+      color: #c2185b;
+      margin-top: 20px;
+      border-bottom: 1px solid #f8bbd0;
+      display: inline-block;
+      padding-bottom: 5px;
+    }
 
-main {
-  background-color: #fff;
-  border-radius: 16px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-  padding: 1.5rem;
-  max-width: 600px;
-  width: 95%;
-  margin: 1.5rem auto;
-  position: relative;
-  z-index: 2;
-}
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 10px 0 20px;
+    }
 
-h2 { color: #002366; text-align: center; font-size: 1.8rem; }
+    ul li {
+      font-size: 1.2em;
+      margin: 5px 0;
+      color: #444;
+    }
 
-.menu-section { margin-bottom: 1.5rem; }
-.menu-section h3 {
-  color: #d2691e;
-  border-bottom: 1px solid #ccc;
-  padding-bottom: 0.25rem;
-  margin-bottom: 0.5rem;
-  font-size: 1.2rem;
-}
+    .note-top, .note-bottom {
+      font-size: 1em;
+      color: #666;
+      margin: 15px 0;
+      font-style: italic;
+    }
 
-ul { list-style: none; padding-left: 0; margin: 0; }
-li {
-  position: relative;
-  padding-left: 1.5rem;
-  margin-bottom: 0.3rem;
-  font-size: 1.05rem;
-}
-li::before {
-  content: "●";
-  position: absolute;
-  left: 0;
-  color: #d2691e;
-}
+    .footer {
+      margin-top: 20px;
+      font-size: 1.2em;
+      color: #b71c1c;
+      font-weight: bold;
+    }
 
-footer {
-  margin-top: auto;
-  text-align: center;
-  padding: 1rem;
-  font-size: 0.9rem;
-  color: #fff;
-}
-
-.footer-note {
-  color: #fff;
-  text-align: center;
-  font-size: 0.85rem;
-  margin-bottom: 0.5rem;
-  padding: 0 1rem;
-  line-height: 1.4;
-}
-
-@media (max-width: 480px) {
-  header h1 { font-size: 1.8rem; }
-  main { padding: 1rem; }
-  h2 { font-size: 1.5rem; }
-  .menu-section h3 { font-size: 1.1rem; }
-  li { font-size: 1rem; }
-}
-</style>
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 9999;
+      pointer-events: none;
+    }
+  </style>
 </head>
 <body>
-<canvas id="fireworks"></canvas>
+  <canvas id="fireworks" class="fireworks"></canvas>
 
-<header>
-  <h1 id="title">Pratim & Debjani</h1>
-  <p>Thank you for being part of our Special day</p>
-  <div class="info">
-    <p>Every dish on this menu was chosen with love. So please enjoy the food—it was the most expensive part of the wedding. Eat slowly and savor our debt!</p>
+  <div class="menu">
+    <p class="note-top">
+      Every dish on this menu was chosen with love. So please enjoy the food—it was the most expensive part of the wedding. Eat slowly and savor our debt!
+    </p>
+
+    <h1>Wedding Menu</h1>
+
+    <div>
+      <div class="section-title">Starters</div>
+      <ul>
+        <li>Paneer Tikka</li>
+        <li>Veg Manchurian</li>
+        <li>Chicken Lollipop</li>
+      </ul>
+    </div>
+
+    <div>
+      <div class="section-title">Main Course</div>
+      <ul>
+        <li>Butter Chicken</li>
+        <li>Paneer Butter Masala</li>
+        <li>Dal Makhani</li>
+        <li>Jeera Rice</li>
+        <li>Butter Naan</li>
+      </ul>
+    </div>
+
+    <div>
+      <div class="section-title">Desserts</div>
+      <ul>
+        <li>Gulab Jamun</li>
+        <li>Rasgulla</li>
+        <li>Ice Cream</li>
+      </ul>
+    </div>
+
+    <p class="note-bottom">
+      Thank you for sharing in the joy of our first meal as a married couple. Cheers to love and laughter!
+    </p>
+
+    <div class="footer">
+      Thank you for being part of our Special day
+    </div>
   </div>
-</header>
 
-<main>
-  <h2>Serving Menu</h2>
-  <div class="menu-section">
-    <h3>Main Course</h3>
-    <ul>
-      <li>Chicken Drumstick</li>
-      <li>Salad & Sauce</li>
-      <li>Rumali Roti</li>
-      <li>Keema Chana Masala / Chana Paneer</li>
-      <li>Plain Rice</li>
-      <li>Bhetki Paturi / Chhenar Paturi</li>
-      <li>Pulao</li>
-      <li>Mutton Kosha / Chicken Kosha / Fish Curry / Chhenar Kaliya</li>
-      <li>Chutney</li>
-      <li>Papad</li>
-      <li>Cream Chop</li>
-      <li>Sandesh</li>
-      <li>Ice Cream (stall)</li>
-      <li>Paan</li>
-      <li>Pass Pass</li>
-    </ul>
-  </div>
+  <script>
+    const canvas = document.getElementById('fireworks');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
 
-  <div class="menu-section">
-    <h3>Stall</h3>
-    <ul>
-      <li>Coffee</li>
-      <li>Chicken Kebab</li>
-      <li>Fish Finger</li>
-      <li>Crispy Baby Corn</li>
-      <li>Mocktail</li>
-      <li>Ice Cream</li>
-    </ul>
-  </div>
-</main>
+    let fireworks = [];
 
-<div class="footer-note">
-  <p>Thank you for sharing in the joy of our first meal as a married couple. Cheers to love and laughter!</p>
-</div>
-
-<footer>
-  &copy; 2025 Pratim & Debjani. All rights reserved.
-</footer>
-
-<script>
-// fireworks animation (unchanged)
-const canvas = document.getElementById('fireworks');
-const ctx = canvas.getContext('2d');
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-
-let fireworks = [];
-let particles = [];
-let sparkles = [];
-
-function random(min,max){ return Math.random()*(max-min)+min; }
-
-class Firework {
-  constructor(x, y, targetY){
-    this.x = x;
-    this.y = y;
-    this.targetY = targetY;
-    this.speed = random(2,4);
-    this.exploded = false;
-  }
-  update(){
-    if(this.y > this.targetY) this.y -= this.speed;
-    else if(!this.exploded) {
-      this.explode();
-      this.exploded = true;
+    class Firework {
+      constructor(x, y, colors) {
+        this.x = x;
+        this.y = y;
+        this.colors = colors;
+        this.particles = [];
+        for (let i = 0; i < 100; i++) {
+          this.particles.push({
+            x: this.x,
+            y: this.y,
+            radius: Math.random() * 2 + 1,
+            color: this.colors[Math.floor(Math.random() * this.colors.length)],
+            speed: Math.random() * 5 + 1,
+            angle: Math.random() * Math.PI * 2,
+            alpha: 1,
+            decay: Math.random() * 0.015 + 0.005
+          });
+        }
+      }
+      draw() {
+        this.particles.forEach(p => {
+          ctx.beginPath();
+          ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
+          ctx.fillStyle = `rgba(${p.color},${p.alpha})`;
+          ctx.fill();
+        });
+      }
+      update() {
+        this.particles.forEach(p => {
+          p.x += Math.cos(p.angle) * p.speed;
+          p.y += Math.sin(p.angle) * p.speed;
+          p.alpha -= p.decay;
+        });
+        this.particles = this.particles.filter(p => p.alpha > 0);
+      }
     }
-  }
-  explode(){
-    for(let i=0;i<30;i++) particles.push(new Particle(this.x,this.y));
-  }
-  draw(){
-    if(!this.exploded){
-      ctx.beginPath();
-      ctx.arc(this.x,this.y,2,0,Math.PI*2);
-      ctx.fillStyle='white';
-      ctx.fill();
+
+    function loop() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      fireworks.forEach((f, i) => {
+        f.update();
+        f.draw();
+        if (f.particles.length === 0) fireworks.splice(i, 1);
+      });
+      if (Math.random() < 0.05) {
+        fireworks.push(new Firework(Math.random() * canvas.width, Math.random() * canvas.height / 1.5, [
+          '255,0,0', '255,255,0', '0,255,255', '255,165,0', '0,255,0'
+        ]));
+      }
+      requestAnimationFrame(loop);
     }
-  }
-}
 
-class Particle {
-  constructor(x,y){
-    this.x = x;
-    this.y = y;
-    this.speed=random(1,5);
-    this.angle=random(0,Math.PI*2);
-    this.gravity=0.05;
-    this.alpha=1;
-    this.color=`hsl(${random(0,360)},100%,50%)`;
-  }
-  update(){
-    this.speed*=0.98;
-    this.x+=Math.cos(this.angle)*this.speed;
-    this.y+=Math.sin(this.angle)*this.speed+this.gravity;
-    this.alpha-=0.02;
-  }
-  draw(){
-    ctx.globalAlpha=this.alpha;
-    ctx.beginPath();
-    ctx.arc(this.x,this.y,2,0,Math.PI*2);
-    ctx.fillStyle=this.color;
-    ctx.fill();
-    ctx.globalAlpha=1;
-  }
-}
-
-class Sparkle {
-  constructor(x,y){
-    this.x=x+random(-80,80);
-    this.y=y+random(-10,10);
-    this.alpha=1;
-    this.size=random(1,3);
-  }
-  update(){ this.alpha-=0.03; }
-  draw(){
-    ctx.globalAlpha=this.alpha;
-    ctx.beginPath();
-    ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
-    ctx.fillStyle='gold';
-    ctx.fill();
-    ctx.globalAlpha=1;
-  }
-}
-
-function animate(){
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-
-  if(Math.random()<0.05) fireworks.push(new Firework(random(50,canvas.width-50),canvas.height,random(100,canvas.height/2)));
-  fireworks.forEach((f,i)=>{ f.update(); f.draw(); if(f.exploded) fireworks.splice(i,1); });
-  particles.forEach((p,i)=>{ p.update(); p.draw(); if(p.alpha<=0) particles.splice(i,1); });
-
-  const title = document.getElementById('title');
-  const rect = title.getBoundingClientRect();
-  if(Math.random()<0.1) sparkles.push(new Sparkle(rect.left+rect.width/2, rect.top+rect.height/2));
-  sparkles.forEach((s,i)=>{ s.update(); s.draw(); if(s.alpha<=0) sparkles.splice(i,1); });
-
-  requestAnimationFrame(animate);
-}
-
-animate();
-
-window.addEventListener('resize', ()=>{
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
-});
-</script>
+    loop();
+    window.addEventListener('resize', () => {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    });
+  </script>
 </body>
 </html>
