--- a/index.html
+++ b/index.html
@@ -52,13 +52,10 @@ header p {
   margin-top: 0.5rem;
 }
 
-.sub-info {
-  background-color: #002366;
-  color: #eee;
-  text-align: center;
+header .sub-info {
   font-size: 0.85rem;
-  margin-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  color: #eee;
+  margin-top: 0.3rem; /* small gap below main thank-you */
 }
 
 main {
@@ -121,11 +118,8 @@ footer {
 <header>
   <h1 id="title">Pratim & Debjani</h1>
   <p>Thank you for being part of our Special day</p>
+  <p class="sub-info">Every dish on this menu was chosen with love. So please enjoy the food—it was the most expensive part of the wedding. Eat slowly and savor our debt!</p>
 </header>
-
-<div class="sub-info">
-  <p>Every dish on this menu was chosen with love. So please enjoy the food—it was the most expensive part of the wedding. Eat slowly and savor our debt!</p>
-</div>
 
 <main>
   <h2>Serving Menu</h2>
