--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ header p {
 header .sub-info {
   font-size: 0.85rem;
   color: #eee;
-  margin-top: 0.3rem; /* small gap below main thank-you */
+  margin-top: 0.3rem;
 }
 
 main {
@@ -99,6 +99,15 @@ footer {
   margin-top: auto;
   text-align: center;
   padding: 1rem;
+}
+
+footer .thank-you {
+  font-size: 0.85rem;
+  color: black;
+  margin-bottom: 0.3rem;
+}
+
+footer .copyright {
   font-size: 0.85rem;
   color: #fff;
 }
@@ -158,8 +167,8 @@ footer {
 </main>
 
 <footer>
-  <p>Thank you for sharing in the joy of our first meal as a married couple. Cheers to love and laughter!</p>
-  <p>&copy; 2025 Pratim & Debjani. All rights reserved.</p>
+  <p class="thank-you">Thank you for sharing in the joy of our first meal as a married couple. Cheers to love and laughter!</p>
+  <p class="copyright">&copy; 2025 Pratim & Debjani. All rights reserved.</p>
 </footer>
 
 <script>
