--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ footer .copyright {
 <canvas id="fireworks"></canvas>
 
 <header>
-  <h1 id="title">Pratim & Debjani</h1>
+  <h1 id="title">Pratim 💙 Debjani</h1>
   <p>Thank you for being part of our Special day</p>
   <p class="sub-info">Every dish on this menu was chosen with love. So please enjoy the food—it was the most expensive part of the wedding. Eat slowly and savor our debt!</p>
 </header>
@@ -279,3 +279,4 @@ window.addEventListener('resize', ()=>{
 </script>
 </body>
 </html>
+
