--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ footer .copyright {
 
 <header>
   <h1 id="title">Pratim 💙 Debjani</h1>
-  <p>Thank you for being part of our Special day</p>
-  <p class="sub-info">Every dish on this menu was chosen with love. So please enjoy the food—it was the most expensive part of the wedding. Eat slowly and savor our debt!</p>
+  <p>Thank you for sharing in the joy of our first meal as a married couple.</p>
+  <p class="sub-info">Every dish on this menu was chosen with love. Cheers to love and laughter!</p>
 </header>
 
 <main>
@@ -279,4 +279,5 @@ window.addEventListener('resize', ()=>{
 </script>
 </body>
 </html>
+
 
