--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ footer .copyright {
 </main>
 
 <footer>
-  <p class="thank-you">Thank you for sharing in the joy of our first meal as a married couple. Cheers to love and laughter!</p>
+  <p class="thank-you">I can't tell you VISIT AGAIN</p>
   <p class="copyright">&copy; 2025 Pratim & Debjani. All rights reserved.</p>
 </footer>
 
@@ -279,5 +279,6 @@ window.addEventListener('resize', ()=>{
 </script>
 </body>
 </html>
+
 
 
