--- a/index.html
+++ b/index.html
@@ -68,6 +68,22 @@ main {
   margin: 1.5rem auto;
   position: relative;
   z-index: 2;
+  overflow: hidden;
+}
+
+/* --- bride photo background --- */
+main::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: url('bride.jpg') center center / cover no-repeat;
+  opacity: 0.15;
+  filter: blur(5px);
+  z-index: 1;
+}
+main > * {
+  position: relative;
+  z-index: 2;
 }
 
 h2 { color: #002366; text-align: center; font-size: 1.8rem; }
