--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@ body {
   justify-content: flex-start;
   overflow-x: hidden;
   overflow-y: auto;
+  position: relative;
+}
+
+/* Bride image background behind menu */
+main::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("bride.jpg") center/cover no-repeat;
+  opacity: 0.2; /* Adjust transparency */
+  filter: blur(3px); /* Soft blur */
+  z-index: 0;
 }
 
 canvas { 
@@ -59,50 +74,35 @@ header .sub-info {
 }
 
 main {
-  background-color: #fff;
   border-radius: 16px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
   padding: 1.5rem;
   max-width: 600px;
   width: 95%;
   margin: 1.5rem auto;
   position: relative;
   z-index: 2;
-  overflow: hidden;
+  background: transparent;
 }
 
-/* --- bride photo background --- */
-main::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: url('bride.jpg') center center / cover no-repeat;
-  opacity: 0.15;
-  filter: blur(5px);
-  z-index: 1;
-}
-main > * {
-  position: relative;
-  z-index: 2;
-}
+h2 { color: #002366; text-align: center; font-size: 1.8rem; text-shadow: 1px 1px 2px #fff; }
 
-h2 { color: #002366; text-align: center; font-size: 1.8rem; }
-
-.menu-section { margin-bottom: 1.5rem; }
+.menu-section { margin-bottom: 1.5rem; position: relative; z-index: 2; }
 .menu-section h3 {
   color: #d2691e;
   border-bottom: 1px solid #ccc;
   padding-bottom: 0.25rem;
   margin-bottom: 0.5rem;
   font-size: 1.2rem;
+  text-shadow: 1px 1px 2px #fff;
 }
 
-ul { list-style: none; padding-left: 0; margin: 0; }
+ul { list-style: none; padding-left: 0; margin: 0; position: relative; z-index: 2; }
 li {
   position: relative;
   padding-left: 1.5rem;
   margin-bottom: 0.3rem;
   font-size: 1.05rem;
+  text-shadow: 1px 1px 2px #fff;
 }
 li::before {
   content: "●";
@@ -115,6 +115,8 @@ footer {
   margin-top: auto;
   text-align: center;
   padding: 1rem;
+  position: relative;
+  z-index: 2;
 }
 
 footer .thank-you {
