--- a/index.html
+++ b/index.html
@@ -2,181 +2,168 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pratim & Debjani’s Wedding Menu</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<title>Pratim & Debjani's Wedding Menu</title>
 <style>
-/* Reset & base */
 * { box-sizing: border-box; margin: 0; padding: 0; }
+
 body {
   font-family: 'Georgia', serif;
-  background: linear-gradient(to bottom, #001b4d, #ffffff);
-  color: #2b2b2b;
+  background: linear-gradient(to bottom, #002366, #ffffff);
+  color: #333;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   overflow-x: hidden;
   overflow-y: auto;
   position: relative;
 }
 
-/* Background image with glass effect */
-body::before {
+/* Bride image background behind menu */
+main::before {
   content: "";
-  position: fixed;
-  inset: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: url("bride.jpg") center/cover no-repeat;
-  opacity: 0.25;
-  filter: blur(5px);
+  opacity: 0.2; /* Adjust transparency */
+  filter: blur(3px); /* Soft blur */
   z-index: 0;
 }
 
-/* Fireworks canvas */
 canvas { 
-  position: fixed;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
-  z-index: 10;
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
+  pointer-events: none; 
+  z-index: 9999;
 }
 
-/* Header */
 header {
-  background: rgba(0, 27, 77, 0.85);
+  background-color: #002366;
   color: #fff;
   width: 100%;
   text-align: center;
-  padding: 2rem 1rem 1.2rem;
-  backdrop-filter: blur(4px);
+  padding: 2rem 1rem 1rem 1rem;
   position: relative;
-  z-index: 20;
+  z-index: 2;
 }
 
 header h1 {
-  font-size: 2.4rem;
-  margin-bottom: 0.3rem;
-  letter-spacing: 1px;
+  font-size: 2.2rem;
+  margin: 0;
+  position: relative;
+  display: inline-block;
 }
 
 header p {
-  font-size: 1rem;
-  max-width: 90%;
-  margin: 0.3rem auto;
+  font-size: 1.1rem;
+  margin-top: 0.5rem;
+}
+
+header .sub-info {
+  font-size: 0.85rem;
   color: #eee;
+  margin-top: 0.3rem;
 }
 
-/* Main content */
 main {
-  margin: 2rem auto;
-  padding: 2rem 1.5rem;
-  max-width: 650px;
-  width: 94%;
-  border-radius: 20px;
-  background: rgba(255, 255, 255, 0.7);
-  backdrop-filter: blur(8px);
-  box-shadow: 0 6px 20px rgba(0,0,0,0.15);
-  z-index: 20;
+  border-radius: 16px;
+  padding: 1.5rem;
+  max-width: 600px;
+  width: 95%;
+  margin: 1.5rem auto;
   position: relative;
+  z-index: 2;
+  background: transparent;
 }
 
-main h2 {
-  text-align: center;
-  font-size: 1.9rem;
-  color: #001b4d;
-  margin-bottom: 1.5rem;
+h2 { color: #002366; text-align: center; font-size: 1.8rem; text-shadow: 1px 1px 2px #fff; }
+
+.menu-section { margin-bottom: 1.5rem; position: relative; z-index: 2; }
+.menu-section h3 {
+  color: #d2691e;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 0.25rem;
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
   text-shadow: 1px 1px 2px #fff;
 }
 
-/* Menu sections */
-.menu-section {
-  margin-bottom: 2rem;
-}
-.menu-section h3 {
-  color: #b35c00;
-  border-bottom: 2px solid #d1a671;
-  margin-bottom: 0.6rem;
-  padding-bottom: 0.3rem;
-  font-size: 1.25rem;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-}
-.menu-section ul {
-  list-style: none;
-  padding-left: 0.5rem;
-}
-.menu-section li {
+ul { list-style: none; padding-left: 0; margin: 0; position: relative; z-index: 2; }
+li {
   position: relative;
-  margin-bottom: 0.4rem;
+  padding-left: 1.5rem;
+  margin-bottom: 0.3rem;
   font-size: 1.05rem;
-  line-height: 1.5;
+  text-shadow: 1px 1px 2px #fff;
 }
-.menu-section li::before {
-  content: "•";
+li::before {
+  content: "●";
   position: absolute;
-  left: -1rem;
-  color: #b35c00;
+  left: 0;
+  color: #d2691e;
 }
 
-/* Footer */
 footer {
-  text-align: center;
-  padding: 1.5rem 1rem;
-  color: #222;
-  background: rgba(255, 255, 255, 0.8);
-  backdrop-filter: blur(6px);
   margin-top: auto;
-  width: 100%;
+  text-align: center;
+  padding: 1rem;
   position: relative;
-  z-index: 20;
-  box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
+  z-index: 2;
 }
 
 footer .thank-you {
-  margin-bottom: 0.8rem;
+  color: black;
 }
+
 footer .thank-you .small-text {
-  font-size: 0.75rem;
-  color: #555;
+  font-size: 0.7rem;
   display: block;
   margin-bottom: 0.3rem;
 }
+
 footer .thank-you .big-text {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-weight: bold;
-  color: #001b4d;
   letter-spacing: 1px;
   text-transform: uppercase;
 }
+
 footer .copyright {
   font-size: 0.85rem;
-  color: #666;
+  color: #fff;
 }
 
-/* Responsive */
 @media (max-width: 480px) {
-  header h1 { font-size: 1.9rem; }
-  main { padding: 1.2rem; }
-  main h2 { font-size: 1.6rem; }
+  header h1 { font-size: 1.8rem; }
+  main { padding: 1rem; }
+  h2 { font-size: 1.5rem; }
   .menu-section h3 { font-size: 1.1rem; }
-  .menu-section li { font-size: 1rem; }
+  li { font-size: 1rem; }
+  footer .thank-you .small-text { font-size: 0.6rem; }
+  footer .thank-you .big-text { font-size: 1rem; }
 }
 </style>
 </head>
-
 <body>
 <canvas id="fireworks"></canvas>
 
 <header>
   <h1 id="title">Pratim 💙 Debjani</h1>
   <p>Thank you for sharing in the joy of our first meal as a married couple.</p>
-  <p>Each dish is chosen with love — here’s to love, laughter, and delicious memories!</p>
+  <p class="sub-info">Every dish on this menu was chosen with love. Cheers to love and laughter!</p>
 </header>
 
 <main>
   <h2>Serving Menu</h2>
-
-  <section class="menu-section">
+  <div class="menu-section">
     <h3>Main Course</h3>
     <ul>
       <li>Chicken Drumstick</li>
@@ -191,13 +178,13 @@ footer .copyright {
       <li>Papad</li>
       <li>Cream Chop</li>
       <li>Sandesh</li>
-      <li>Ice Cream (Stall)</li>
+      <li>Ice Cream (stall)</li>
       <li>Paan</li>
       <li>Pass Pass</li>
     </ul>
-  </section>
+  </div>
 
-  <section class="menu-section">
+  <div class="menu-section">
     <h3>Stall</h3>
     <ul>
       <li>Coffee</li>
@@ -207,81 +194,119 @@ footer .copyright {
       <li>Mocktail</li>
       <li>Ice Cream</li>
     </ul>
-  </section>
+  </div>
 </main>
 
 <footer>
   <p class="thank-you">
-    <span class="small-text">We’re so grateful you’re here</span>
-    <span class="big-text">Visit Again</span>
+    <span class="small-text">I can't tell you</span>
+    <span class="big-text">VISIT AGAIN</span>
   </p>
   <p class="copyright">&copy; 2025 Pratim & Debjani. All rights reserved.</p>
 </footer>
 
 <script>
-/* --- Fireworks animation (optimized for mobile) --- */
-const canvas = document.getElementById("fireworks");
-const ctx = canvas.getContext("2d");
+const canvas = document.getElementById('fireworks');
+const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
-let fireworks = [], particles = [];
 
-function random(min, max) { return Math.random() * (max - min) + min; }
+let fireworks = [];
+let particles = [];
+let sparkles = [];
+
+function random(min,max){ return Math.random()*(max-min)+min; }
 
 class Firework {
-  constructor(x, y, targetY) {
-    this.x = x; this.y = y; this.targetY = targetY;
-    this.speed = random(2, 4); this.exploded = false;
+  constructor(x, y, targetY){
+    this.x = x;
+    this.y = y;
+    this.targetY = targetY;
+    this.speed = random(2,4);
+    this.exploded = false;
   }
-  update() {
-    if (this.y > this.targetY) this.y -= this.speed;
-    else if (!this.exploded) { this.explode(); this.exploded = true; }
+  update(){
+    if(this.y > this.targetY) this.y -= this.speed;
+    else if(!this.exploded) {
+      this.explode();
+      this.exploded = true;
+    }
   }
-  explode() {
-    for (let i = 0; i < 25; i++) particles.push(new Particle(this.x, this.y));
+  explode(){
+    for(let i=0;i<30;i++) particles.push(new Particle(this.x,this.y));
   }
-  draw() {
-    if (!this.exploded) {
-      ctx.beginPath(); ctx.arc(this.x, this.y, 2, 0, Math.PI * 2);
-      ctx.fillStyle = "white"; ctx.fill();
+  draw(){
+    if(!this.exploded){
+      ctx.beginPath();
+      ctx.arc(this.x,this.y,2,0,Math.PI*2);
+      ctx.fillStyle='white';
+      ctx.fill();
     }
   }
 }
 
 class Particle {
-  constructor(x, y) {
-    this.x = x; this.y = y;
-    this.speed = random(1, 5); this.angle = random(0, Math.PI * 2);
-    this.gravity = 0.04; this.alpha = 1;
-    this.color = `hsl(${random(0, 360)}, 100%, 60%)`;
+  constructor(x,y){
+    this.x = x;
+    this.y = y;
+    this.speed=random(1,5);
+    this.angle=random(0,Math.PI*2);
+    this.gravity=0.05;
+    this.alpha=1;
+    this.color=`hsl(${random(0,360)},100%,50%)`;
   }
-  update() {
-    this.speed *= 0.97;
-    this.x += Math.cos(this.angle) * this.speed;
-    this.y += Math.sin(this.angle) * this.speed + this.gravity;
-    this.alpha -= 0.02;
+  update(){
+    this.speed*=0.98;
+    this.x+=Math.cos(this.angle)*this.speed;
+    this.y+=Math.sin(this.angle)*this.speed+this.gravity;
+    this.alpha-=0.02;
   }
-  draw() {
-    ctx.globalAlpha = this.alpha;
+  draw(){
+    ctx.globalAlpha=this.alpha;
     ctx.beginPath();
-    ctx.arc(this.x, this.y, 2, 0, Math.PI * 2);
-    ctx.fillStyle = this.color;
+    ctx.arc(this.x,this.y,2,0,Math.PI*2);
+    ctx.fillStyle=this.color;
     ctx.fill();
-    ctx.globalAlpha = 1;
+    ctx.globalAlpha=1;
   }
 }
 
-function animate() {
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-  if (Math.random() < 0.04)
-    fireworks.push(new Firework(random(50, canvas.width - 50), canvas.height, random(100, canvas.height / 2)));
-  fireworks.forEach((f, i) => { f.update(); f.draw(); if (f.exploded) fireworks.splice(i, 1); });
-  particles.forEach((p, i) => { p.update(); p.draw(); if (p.alpha <= 0) particles.splice(i, 1); });
+class Sparkle {
+  constructor(x,y){
+    this.x=x+random(-80,80);
+    this.y=y+random(-10,10);
+    this.alpha=1;
+    this.size=random(1,3);
+  }
+  update(){ this.alpha-=0.03; }
+  draw(){
+    ctx.globalAlpha=this.alpha;
+    ctx.beginPath();
+    ctx.arc(this.x,this.y,this.size,0,Math.PI*2);
+    ctx.fillStyle='gold';
+    ctx.fill();
+    ctx.globalAlpha=1;
+  }
+}
+
+function animate(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+
+  if(Math.random()<0.05) fireworks.push(new Firework(random(50,canvas.width-50),canvas.height,random(100,canvas.height/2)));
+  fireworks.forEach((f,i)=>{ f.update(); f.draw(); if(f.exploded) fireworks.splice(i,1); });
+  particles.forEach((p,i)=>{ p.update(); p.draw(); if(p.alpha<=0) particles.splice(i,1); });
+
+  const title = document.getElementById('title');
+  const rect = title.getBoundingClientRect();
+  if(Math.random()<0.1) sparkles.push(new Sparkle(rect.left+rect.width/2, rect.top+rect.height/2));
+  sparkles.forEach((s,i)=>{ s.update(); s.draw(); if(s.alpha<=0) sparkles.splice(i,1); });
+
   requestAnimationFrame(animate);
 }
+
 animate();
 
-window.addEventListener("resize", () => {
+window.addEventListener('resize', ()=>{
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
 });
