--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 body {
   font-family: 'Georgia', serif;
-  background: linear-gradient(to bottom, #002366, #ffffff);
+  background: linear-gradient(to bottom, #002366, #87CEFA);
   color: #333;
   min-height: 100vh;
   display: flex;
@@ -30,8 +30,8 @@ main::before {
   width: 100%;
   height: 100%;
   background: url("bride.jpg") center/cover no-repeat;
-  opacity: 0.2; /* Adjust transparency */
-  filter: blur(3px); /* Soft blur */
+  opacity: 0.25; /* Slightly more visible */
+  filter: blur(1.5px); /* Reduced blur */
   z-index: 0;
 }
 
@@ -73,6 +73,7 @@ header .sub-info {
   margin-top: 0.3rem;
 }
 
+/* Main content box with glass effect */
 main {
   border-radius: 16px;
   padding: 1.5rem;
@@ -81,12 +82,24 @@ main {
   margin: 1.5rem auto;
   position: relative;
   z-index: 2;
-  background: transparent;
+  background: rgba(255, 255, 255, 0.85);
+  backdrop-filter: blur(8px);
+  box-shadow: 0 4px 15px rgba(0,0,0,0.2);
 }
 
-h2 { color: #002366; text-align: center; font-size: 1.8rem; text-shadow: 1px 1px 2px #fff; }
+h2 { 
+  color: #002366; 
+  text-align: center; 
+  font-size: 1.8rem; 
+  text-shadow: 1px 1px 2px #fff; 
+}
 
-.menu-section { margin-bottom: 1.5rem; position: relative; z-index: 2; }
+.menu-section { 
+  margin-bottom: 1.5rem; 
+  position: relative; 
+  z-index: 2; 
+}
+
 .menu-section h3 {
   color: #d2691e;
   border-bottom: 1px solid #ccc;
@@ -96,14 +109,23 @@ h2 { color: #002366; text-align: center; font-size: 1.8rem; text-shadow: 1px 1px
   text-shadow: 1px 1px 2px #fff;
 }
 
-ul { list-style: none; padding-left: 0; margin: 0; position: relative; z-index: 2; }
+ul { 
+  list-style: none; 
+  padding-left: 0; 
+  margin: 0; 
+  position: relative; 
+  z-index: 2; 
+}
+
 li {
   position: relative;
   padding-left: 1.5rem;
   margin-bottom: 0.3rem;
   font-size: 1.05rem;
+  color: #d2691e; /* Make all food list orange */
   text-shadow: 1px 1px 2px #fff;
 }
+
 li::before {
   content: "●";
   position: absolute;
