--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@ canvas{
 }
 
 header{
-  /* Remove solid background to blend into full-page gradient */
   background:transparent;
   color:#fff;
   width:100%;
@@ -113,14 +112,14 @@ li{
   padding-left:1.5rem;
   margin-bottom:.3rem;
   font-size:1.05rem;
-  color:#d2691e;
+  color:black; /* food names are now black */
   text-shadow:1px 1px 2px #fff;
 }
 li::before{
   content:"●";
   position:absolute;
   left:0;
-  color:#d2691e;
+  color:#d2691e; /* orange bullet stays */
 }
 
 footer{
@@ -151,8 +150,8 @@ footer .copyright{font-size:.85rem;color:#fff}
 
 <header>
   <h1 id="title">Pratim 💙 Debjani</h1>
-  <p>Thank you for sharing in the joy of our first meal as a married couple.</p>
-  <p class="sub-info">Every dish on this menu was chosen with love. Cheers to love and laughter!</p>
+  <p>Thank you for sharing in the joy of our first meal as a married couple</p>
+  <p class="sub-info">Every dish on this menu was chosen with Love. Cheers to Love and Laughter!</p>
 </header>
 
 <main>
@@ -196,7 +195,7 @@ footer .copyright{font-size:.85rem;color:#fff}
     <span class="small-text">I can't tell you</span>
     <span class="big-text">VISIT AGAIN</span>
   </p>
-  <p class="copyright">&copy; 2025 Pratim & Debjani. All rights reserved.</p>
+  
 </footer>
 
 <script>
