--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@ header h1{
   font-size:2.2rem;
   margin:0;
   display:inline-block;
+  background:pink;                 /* pink background */
+  border:4px solid gold;           /* golden border */
+  padding:0.5rem 1rem;
+  border-radius:12px;
+  box-shadow:0 0 10px rgba(255,215,0,0.7);
 }
 header p{
   font-size:1.1rem;
