--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 body{
   font-family:'Georgia',serif;
-  background:linear-gradient(to bottom,#0044cc,#87CEFA); /* unified gradient */
+  background:linear-gradient(120deg,#fef6f9,#fceabb,#fff4f7);
+  background-size:300% 300%;
+  animation:softGradient 15s ease-in-out infinite;
   color:#333;
   min-height:100vh;
   display:flex;
@@ -19,6 +21,12 @@ body{
   overflow-x:hidden;
   overflow-y:auto;
   position:relative;
+}
+
+@keyframes softGradient{
+  0%{background-position:0% 50%;}
+  50%{background-position:100% 50%;}
+  100%{background-position:0% 50%;}
 }
 
 /* Bride photo background */
@@ -64,10 +72,11 @@ header h1{
 header p{
   font-size:1.1rem;
   margin-top:.5rem;
+  color:#002366;
 }
 header .sub-info{
   font-size:.85rem;
-  color:#f8f8f8;
+  color:#002366;
   margin-top:.3rem;
 }
 
@@ -117,14 +126,14 @@ li{
   padding-left:1.5rem;
   margin-bottom:.3rem;
   font-size:1.05rem;
-  color:black; /* food names are now black */
+  color:black;
   text-shadow:1px 1px 2px #fff;
 }
 li::before{
   content:"●";
   position:absolute;
   left:0;
-  color:#d2691e; /* orange bullet stays */
+  color:#d2691e;
 }
 
 footer{
@@ -200,7 +209,6 @@ footer .copyright{font-size:.85rem;color:#fff}
     <span class="small-text">I can't tell you</span>
     <span class="big-text">VISIT AGAIN</span>
   </p>
-  
 </footer>
 
 <script>
